test/classes/errors/newWithoutParen.good
newWithoutParen.chpl:23: syntax error: 'new' expression is missing its argument list
